# FixDecoder

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  sonarcloud-cpp.yml
docker/fix-controller/: Dockerfile.acceptor  Dockerfile.builder  Dockerfile.initiator  Dockerfile.runtime  README.md  compose.yml  run_all_scenarios.sh
include/: fix_controller.h  fix_decoder.h  fix_dictionary.h  fix_msgtype_key.h  fix_socket_connection.h
scripts/: fetch_quickfix_dicts.sh  fetch_sample_fix_messages.sh  generate_fix_decoder_maps.py  generate_fix_decoder_maps.sh  generate_realistic_fix_samples.py  generate_realistic_fix_samples_nonfatal.sh
src/: CMakeLists.txt  examples.cc  fix_controller.cc  fix_controller_demo.cc  fix_decoder.cc  fix_dictionary.cc  fix_socket_connection.cc
test/: CMakeLists.txt  fix_controller_tests.cc  fixdecoder_tests.cc  run_tests.cc
test/integration/: Dockerfile  Dockerfile.builder  Dockerfile.profiler  Dockerfile.runtime  README.md  compose.yml  profile_hotpaths.sh  profiler_ui.sh  run_all_scenarios.sh
test/integration/container-scripts/: build_instrumented_targets.sh  fix_ownership.sh  generate_integration_coverage.sh  generate_unit_coverage.sh  run_unit_tests_profiled.sh
test/test_messages/: FIX44_realistic_20.messages  FIX50SP1_realistic_20.messages  FIX50SP2_realistic_20.messages  FIXT11_realistic_20.messages
test/unit/: CMakeLists.txt  fix_controller_tests.cc  fixdecoder_tests.cc
test/unit/test_messages/: FIX40_realistic_20.messages  FIX41_realistic_20.messages  FIX42_realistic_20.messages  FIX43_realistic_20.messages  FIX50_realistic_20.messages
tools/fix-web-ui/: Dockerfile  README.md  app.py  fix_web_parser.cc
tools/fix-web-ui/static/: style.css
tools/fix-web-ui/templates/: index.html
